# cpp_travis_appveyor_tests

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/functions/: test.h
src/: CMakeLists.txt  main.cc
src/functions/: test.cc
test/: CMakeLists.txt  test.cc
tools/: build.bat  clean.bat  generate.bat  run.bat  run_tests.bat
